
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 FEB 03a
   * in cycle/resconv/_MUSCL+/resconv.c
     - added AOWENO7
   * in cycle/resconv/_MUSCL+/resconv.hh
     - changed hbw_resconv_fluid from 3 to 4
   * in model/share/fluid_share.c
     - in condition_Lambda_plus_minus_Parent(), changed factP=max(0.0,pow(fabs(Pstarmax-Pstarmin)/Pstarmin,1.0));
       to factP=max(0.0,pow(fabs(Pstarmax-Pstarmin)/Pstarmin,1.0)-0.3); to turn off the eigenvalue
       conditioning completely away from shocks (beneficial for ILES with high order schemes)


2019 FEB 02a
   * in cycle/resconv/_MUSCL/resconv.c
     - added FACEINTEG_AOWENO5


2019 FEB 01b
   * in cycle/resconv/_MUSCL/doc/report.tex
     - improved WENO section


2019 FEB 01a
   * in cycle/resconv/_MUSCL/doc/report.tex
     - improved WENO section


2019 JAN 31a
   * in cycle/resconv/_MUSCL/doc/report.tex
     - added WENO section


2019 JAN 28a
   * in cycle/resconv/_MUSCL/resconv.c
     - added FACEINTEG_CENTRAL5


2019 JAN 26a
   * in cycle/resconv/_MUSCL/doc/report.tex
     - added 5th order central integration scheme


2019 JAN 25b
   * in cycle/share/res_share.c
     - substituted eps=1e-49 by eps=WENO_EPSILON in various locations 
     - added definition of WENO_EPSILON at top of file and set it to 1e-18


2019 JAN 25a
   * renamed 
     - FACEINTEG_SECONDORDER to FACEINTEG_CENTRAL3
     - FACEINTEG_FIRSTORDER to FACEINTEG_CENTRAL1


2019 JAN 24b
   * in cycle/res/_generic/res.c
     - in find_residual(), added zoneext 
   * in cycle/resconv/_MUSCL/resconv.c
     - in find_Fstar_interfaces(), only store Fstar at interfaces if FACEINTEG!=FACEINTEG_FIRSTORDER
     - in integrate_Fstar_interface(), made code more efficient
     - in add_dFstar_residual(), added old code for FACEINTEG=FACEINTEG_FIRSTORDER that doesn't use