@@ -1,1 +1,1 @@
-_multizone
+_standard
